# nexus

./: .env.example  Cargo.toml  README.md  workflow.md
migrations/: 20240001_create_enums.sql  20240002_create_hospitals.sql  20240003_create_users.sql  20240004_create_hospital_documents.sql  20240005_create_registration_audit_log.sql  20240006_create_notifications.sql  20240007_create_access_policies.sql  20240008_create_accreditation.sql  20240009_create_hospital_locations.sql  20240010_create_billing.sql  20240011_create_clinicians.sql  20240012_create_shifts.sql
src/: config.rs  db.rs  errors.rs  main.rs  routes.rs
src/handlers/: auth.rs  health.rs  hospitals.rs  mod.rs
src/models/: access_policy.rs  accreditation.rs  billing.rs  clinician.rs  hospital.rs  location.rs  mod.rs  registration.rs  shift.rs  user.rs
